# nion

./: CMakeLists.txt  README.md  boostOctonionTest.hpp  boostQuaternionTest.hpp  complexTest.hpp  main.cpp  niolloc.hpp  nion.cpp  nion.hpp  nion_lib.cpp  nion_trig.cpp  nion_trig.hpp  octonionTest.hpp  quaternionTest.hpp  sedenionTest.hpp  timings.txt  trigintaduonionTest.hpp
Tests/: CMakeLists.txt  boostOctonionTest.hpp  boostQuaternionTest.hpp  complexTest.hpp  main.cpp  sedenionTest.hpp  trigintaduonionTest.hpp
